<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/id_placeholder"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/date_placeholder" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvId"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/email_placeholder" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvId"
                android:layout_toEndOf="@id/tvEmail"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/phone_placeholder" />
            <TextView
                android:id="@+id/tv_orario_inizio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvEmail"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:text="Inizio Ordine: "/>
            <TextView
                android:id="@+id/orario_inizio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvEmail"
                android:layout_toEndOf="@id/tv_orario_inizio"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="10dp"
                android:text="12:00:00"/>

            <TextView
                android:id="@+id/tv_orario_fine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_orario_inizio"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:text="Fine Ordine: "/>
            <TextView
                android:id="@+id/orario_fine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_orario_inizio"
                android:layout_toEndOf="@id/tv_orario_fine"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="10dp"
                android:text="12:10:00"/>

            <TextView
                android:id="@+id/tvNumPiadine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/num_piadine_placeholder" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>